support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_misplaced_else.i
%module xxx


#else
int x;
#endif

